removeStack from Model class fixed.
scrollbar removed

model event init rename to resize

--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    overflow: hidden;
     user-select: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .resources {
